modified the like and comment
